--- a/portfolio.html
+++ b/portfolio.html
@@ -21,19 +21,31 @@
 
             <button class="slide" ng-click="aboutPage();">&nbsp;</button>
         </div>
-        <div ng-if="aboutVisible == true">
-            <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div ng-if="navbarVisible == true">
+            <nav class="navbar navbar-inverse navbar-fixed-top navbar-color">
                 <div class="container-fluid">
                     <ul class="nav navbar-nav">
-                        <li ng-click="homePage();"><a href="#">HOME</a></li>
-                        <li class="active" ng-click="aboutPage();"><a href="#">ABOUT</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li ng-class="{ active: homeVisible }" ng-click="homePage();"><a href="#">HOME</a></li>
+                        <li ng-class="{ active: aboutVisible }" ng-click="aboutPage();"><a href="#">ABOUT</a></li>
+                        <li ng-class="{ active: portfolioVisible }" ng-click="portfolioPage();"><a href="#">PORTFOLIO</a></li>
+                        <li ng-class="{ active: contactVisible }" ng-click="contactPage();"><a href="#">CONTACT</a></li>
+                        <li>
+
+                        </li>
                     </ul>
+                    <p class="navbar-btn">
+                        <a href="https://drive.google.com/file/d/1g2ZZirvecBtHxw-JIJEzxUAP6SWyGYiF/view" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;" class="btn btn-default">Resume</a>
+                    </p>
                 </div>
             </nav>
-            <div class="container" style="margin-top:50px">
-                <h1>In Progress</h1>
+            <div ng-if="aboutVisible == true" class="container" style="margin-top:50px">
+                <h1>About In Progress</h1>
+            </div>
+            <div ng-if="portfolioVisible == true" class="container" style="margin-top:50px">
+                <h1>Portfolio In Progress</h1>
+            </div>
+            <div ng-if="contactVisible == true" class="container" style="margin-top:50px">
+                <h1>Contact In Progress</h1>
             </div>
         </div>
     </div>
