--- a/portfolio.html
+++ b/portfolio.html
@@ -2,51 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Indrajeet's Portfolio</title>
     <script src="lib/angular.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="portfolio.css">
     <script src="portfolio.js"></script>
+    <script src="lib/jquery.js"></script>
+    <script src="lib/bootstrap.js"></script>
+    <link rel="stylesheet" href="lib/bootstrap.css">
 </head>
-<body ng-app = "Mymodule">
-    <div class="wrap" ng-controller="myController">
-        <div class="intro" ng-if="homeVisible == true">
-            <h1 style="padding-top: 15%">Hello, I'm <span>Indrajeet Mandloi</span>.</h1>
-            <h1>I'm a Full-Stack Web Developer.</h1>
-            <!--<a href="#" class="btn btn-info btn-lg arrow-button">-->
-                <!--View my work <span class="glyphicon glyphicon-circle-arrow-right"></span>-->
-            <!--</a>-->
+<body ng-app = "Mymodule" ng-controller="myController">
+    <div class="intro" ng-if="homeVisible == true">
+        <h1 style="padding-top: 15%">Hello, I'm <span>Indrajeet Mandloi</span>.</h1>
+        <h1>I'm a Full-Stack Web Developer.</h1>
+        <!--<a href="#" class="btn btn-info btn-lg arrow-button">-->
+            <!--View my work <span class="glyphicon glyphicon-circle-arrow-right"></span>-->
+        <!--</a>-->
 
-            <button class="slide" ng-click="aboutPage();">&nbsp;</button>
-        </div>
-        <div ng-if="navbarVisible == true">
-            <nav class="navbar navbar-inverse navbar-fixed-top navbar-color">
-                <div class="container-fluid">
-                    <ul class="nav navbar-nav">
+        <button class="slide" ng-click="aboutPage();">&nbsp;</button>
+    </div>
+    <div ng-if="navbarVisible == true">
+        <div class="navbar navbar-inverse">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button"  class="navbar-toggle" data-toggle="collapse" data-target=".list">
+
+                        <span class="icon-bar"> </span>
+                        <span class="icon-bar"> </span>
+                        <span class="icon-bar"> </span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse list">
+                    <ul class="nav navbar-nav navbar-right">
                         <li ng-class="{ active: homeVisible }" ng-click="homePage();"><a href="#">HOME</a></li>
                         <li ng-class="{ active: aboutVisible }" ng-click="aboutPage();"><a href="#">ABOUT</a></li>
                         <li ng-class="{ active: portfolioVisible }" ng-click="portfolioPage();"><a href="#">PORTFOLIO</a></li>
                         <li ng-class="{ active: contactVisible }" ng-click="contactPage();"><a href="#">CONTACT</a></li>
-                        <li>
-
-                        </li>
+                        <span class="navbar-btn">
+                            <a href="https://drive.google.com/file/d/1g2ZZirvecBtHxw-JIJEzxUAP6SWyGYiF/view" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;" class="btn btn-default">RESUME</a>
+                        </span>
                     </ul>
-                    <p class="navbar-btn">
-                        <a href="https://drive.google.com/file/d/1g2ZZirvecBtHxw-JIJEzxUAP6SWyGYiF/view" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;" class="btn btn-default">Resume</a>
-                    </p>
                 </div>
-            </nav>
-            <div ng-if="aboutVisible == true" class="container" style="margin-top:50px">
-                <h1>About In Progress</h1>
             </div>
-            <div ng-if="portfolioVisible == true" class="container" style="margin-top:50px">
-                <h1>Portfolio In Progress</h1>
+        </div>
+    </div>
+    <div class="container">
+        <div ng-if="aboutVisible == true">
+            <div class="hexagon-skills-wrap">
+                <div class="row">
+                    <!--<div class="col flex">-->
+                        <!--<div class="hex-wrap">-->
+                    <div class="col-md-3 relative">
+                            <div class=" hexagon thisDiv"></div>
+                    </div>
+                    <div class="col-md-3 relative">
+                        <div class=" hexagon thisDiv">
+                            <i class="mdi-speedometer"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-3 relative">
+                        <div class=" hexagon thisDiv"></div>
+                    </div>
+                    <div class="col-md-3 relative">
+                        <div class=" hexagon thisDiv"></div>
+                    </div>
+                        <!--</div>-->
+                    <!--</div>-->
+                </div>
+                <div class="hexagon-skillbars-wrap row">
+                    <h1>About In Progress</h1>
+                </div>
             </div>
-            <div ng-if="contactVisible == true" class="container" style="margin-top:50px">
-                <h1>Contact In Progress</h1>
-            </div>
+
+        </div>
+        <div ng-if="portfolioVisible == true" class="container" style="margin-top:50px">
+            <h1>Portfolio In Progress</h1>
+        </div>
+        <div ng-if="contactVisible == true" class="container" style="margin-top:50px">
+            <h1>Contact In Progress</h1>
         </div>
     </div>
 </body>
