--- a/portfolio.html
+++ b/portfolio.html
@@ -52,25 +52,58 @@
                 <div class="row">
                     <!--<div class="col flex">-->
                         <!--<div class="hex-wrap">-->
-                    <div class="col-md-3 relative">
+                    <div class="col-md-3 relative absolute-center">
                             <div class=" hexagon thisDiv"></div>
                     </div>
-                    <div class="col-md-3 relative">
+                    <div class="col-md-3 relative absolute-center">
                         <div class=" hexagon thisDiv">
                             <i class="mdi-speedometer"></i>
                         </div>
                     </div>
-                    <div class="col-md-3 relative">
+                    <div class="col-md-3 relative absolute-center">
                         <div class=" hexagon thisDiv"></div>
                     </div>
-                    <div class="col-md-3 relative">
+                    <div class="col-md-3 relative absolute-center">
                         <div class=" hexagon thisDiv"></div>
                     </div>
                         <!--</div>-->
                     <!--</div>-->
                 </div>
                 <div class="hexagon-skillbars-wrap row">
-                    <h1>About In Progress</h1>
+					<div class="col-md-6">
+						<div class="picture-hexagon" style="left: 5%;">
+						  <div class="hexTop"></div>
+						  <div class="hexBottom"></div>
+						</div>
+					</div>
+					<div class="col-md-6" style="padding-top: 2%">
+						<div class="progress">
+						<!--	<div class="skill-name" role="" style="width: 20%; height: 22px; background-color: #00A1A7;">AngularJS</div>-->
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 25px; background-color: #00A1A7;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">AngularJS</div>
+							<div class="progress-percent">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+						</div>
+					</div>
                 </div>
             </div>
 
