about page completed

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-md-3 relative absolute-center">
                         <div class=" hexagon thisDiv">
-                            <i class="mdi-speedometer"></i>
+                            <i class="mdi mdi-speedometer"></i>
                         </div>
                     </div>
                     <div class="col-md-3 relative absolute-center">
@@ -69,6 +69,28 @@
                         <!--</div>-->
                     <!--</div>-->
                 </div>
+				<div class="row">
+					<div class="col-md-3">
+                        <h5 class="text-center"><b class="match-text">Problem Solving</b></h5>
+						<p>Original thinker and have the ability to go beyond traditional approaches, persistent and do not give up easily.</p>
+                    </div>
+                    <div class="col-md-3 ">
+                        <h5 class="text-center"><b class="match-text">Efficient Coding</b></h5>
+						Have good knowledge of algorithms and always try to reduce resource consumption
+						<a href="#" ng-hide="showText" ng-click="readMore()">Read More..</a>
+						 <span ng-show="showText">and completion time as much as possible.</span>
+                    </div>
+                    <div class="col-md-3 ">
+                       <h5 class="text-center"><b class="match-text">Debugging Skills</b></h5>
+					   <p>Analyze and find plan of action before blindly diving into the debugger.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5 class="text-center"><b class="match-text">Respect of Deadlines</b></h5>
+						Had taken two subjects in final semester at same time, was doing full time Internship.
+						<a href="#" ng-hide="showText" ng-click="readMore()">Read More..</a>
+						 <span ng-show="showText">Got A's in both subject and got full time job in same company.</span>
+                    </div>
+				</div>
                 <div class="hexagon-skillbars-wrap row">
 					<div class="col-md-6">
 						<div class="picture-hexagon" style="left: 5%;">
@@ -79,29 +101,36 @@
 					<div class="col-md-6" style="padding-top: 2%">
 						<div class="progress">
 						<!--	<div class="skill-name" role="" style="width: 20%; height: 22px; background-color: #00A1A7;">AngularJS</div>-->
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 25px; background-color: #00A1A7;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">AngularJS</div>
-							<div class="progress-percent">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 90%; height: 25px; background-color: #64C7CC;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Python</div>
+							<div class="progress-percent text-right">90%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 85%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Java</div>
+							<div class="progress-percent text-right">85%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 90%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">AngularJS</div>
+							<div class="progress-percent text-right">90%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 90%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
+							<div class="progress-percent text-right">90%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 90%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Bootstrap</div>
+							<div class="progress-percent text-right">90%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 85%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Algorithms</div>
+							<div class="progress-percent text-right">85%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar text-center" role="progressbar" style="width: 85%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">REST API's</div>
+							<div class="progress-percent text-right">85%</div>
 						</div>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" style="width: 80%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+							<div class="progress-bar" role="progressbar" style="width: 90%; height: 22px; background-color: #64C7CC;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Oracle SQL, Elastic Search</div>
+							<div class="progress-percent text-right">90%</div>
 						</div>
 					</div>
                 </div>
